apps/production/auth/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
  namespace: auth
spec:
  routes:
    - match: Host(`gitter.uk`) && PathPrefix(`/auth`) # Hostname to match
      kind: Rule
      services: # Service to redirect requests to
      - name: keycloak-http
        port: 80
        scheme: http
  tls:                              
    secretName: cert-secret
